--- a/index.html
+++ b/index.html
@@ -331,27 +331,21 @@
                 layout: 'split',
                 title: "價值載體數位化",
                 leftContent: (
+                    <div className="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6 items-center justify-items-center w-full">
+                        <img src="https://i.urusai.cc/BBmeU.png" alt="價值載體 1" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
+                        <img src="https://i.urusai.cc/G3S4y.png" alt="價值載體 2" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
+                        <img src="https://i.urusai.cc/dq3ub.png" alt="價值載體 3" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
+                        <img src="https://i.urusai.cc/CODJL.png" alt="價值載體 4" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
+                    </div>
+                ),
+                rightContent: null
+            },
+            {
+                id: 10,
+                layout: 'split',
+                title: "價值載體的演進與中間人",
+                leftContent: (
                     <div className="space-y-5">
-                        <div className="bg-white p-5 rounded-2xl shadow-sm border border-slate-100">
-                            <div className="grid grid-cols-4 gap-3 md:gap-4 items-center">
-                                <div className="flex flex-col items-center justify-center gap-2">
-                                    <div className="p-3 bg-blue-50 rounded-2xl border border-blue-100">{<IconCow />}</div>
-                                    <div className="text-xs md:text-sm font-bold text-slate-500">牛</div>
-                                </div>
-                                <div className="flex flex-col items-center justify-center gap-2">
-                                    <div className="p-3 bg-amber-50 rounded-2xl border border-amber-100">{<IconGold />}</div>
-                                    <div className="text-xs md:text-sm font-bold text-slate-500">黃金</div>
-                                </div>
-                                <div className="flex flex-col items-center justify-center gap-2">
-                                    <div className="p-3 bg-blue-50 rounded-2xl border border-blue-100">{<IconBanknote />}</div>
-                                    <div className="text-xs md:text-sm font-bold text-slate-500">紙鈔</div>
-                                </div>
-                                <div className="flex flex-col items-center justify-center gap-2">
-                                    <div className="p-3 bg-blue-50 rounded-2xl border border-blue-100">{<IconMobilePay />}</div>
-                                    <div className="text-xs md:text-sm font-bold text-slate-500">數位支付</div>
-                                </div>
-                            </div>
-                        </div>
                         <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
                             <h3 className="text-xl font-bold text-slate-800 mb-2">價值載體的演進</h3>
                             <p className="text-lg text-slate-600">人類一直在讓價值載體更易攜帶、易交易。貨幣越來越「沒用」— 不一定要能吃、能用、摸得著，最終只剩「交易便利」。</p>
@@ -379,7 +373,7 @@
                 )
             },
             {
-                id: 10,
+                id: 11,
                 layout: 'split',
                 title: "區塊鏈 vs 銀行：數位面交與優缺點",
                 leftContent: (
@@ -414,7 +408,7 @@
                 )
             },
             {
-                id: 11,
+                id: 12,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -446,7 +440,7 @@
                 )
             },
             {
-                id: 12,
+                id: 13,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -471,7 +465,7 @@
                 )
             },
             {
-                id: 13,
+                id: 14,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -498,7 +492,7 @@
                 )
             },
             {
-                id: 14,
+                id: 15,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -533,7 +527,7 @@
                 )
             },
             {
-                id: 15,
+                id: 16,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
@@ -585,17 +579,19 @@
                         );
                     case 'split':
                         return (
-                            <div className="flex flex-col md:flex-row h-full px-4 md:px-10 py-6 md:py-10 gap-6 md:gap-12 overflow-hidden items-center min-h-0">
-                                <div className={`flex flex-col justify-center h-full min-h-0 w-full ${slide.leftClasses || 'flex-1'}`}>
+                            <div className={`flex flex-col md:flex-row h-full px-4 md:px-10 py-6 md:py-10 gap-6 md:gap-12 overflow-hidden items-center min-h-0 ${slide.rightContent == null ? 'md:justify-center' : ''}`}>
+                                <div className={`flex flex-col justify-center h-full min-h-0 w-full ${slide.rightContent == null ? 'max-w-4xl mx-auto' : ''} ${slide.leftClasses || 'flex-1'}`}>
                                     <div className="flex flex-col md:flex-row md:items-center gap-4 md:gap-6 mb-6 md:mb-8 flex-shrink-0">
                                         {slide.tag && <span className="self-start md:self-auto bg-amber-500 text-white px-4 py-2 rounded-lg text-base md:text-lg font-bold shadow-md">{slide.tag}</span>}
                                         <h2 className="text-2xl md:text-5xl font-bold text-slate-800 border-l-8 border-amber-500 pl-6">{slide.title}</h2>
                                     </div>
                                     <div className="flex-1 pr-2 min-h-0 overflow-hidden flex flex-col justify-center">{slide.leftContent}</div>
                                 </div>
-                                <div className={`flex flex-col justify-center bg-slate-50 rounded-3xl p-6 md:p-8 w-full h-full min-h-0 overflow-hidden ${slide.rightClasses || 'flex-1'}`}>
-                                    {slide.rightContent}
-                                </div>
+                                {slide.rightContent != null && (
+                                    <div className={`flex flex-col justify-center bg-slate-50 rounded-3xl p-6 md:p-8 w-full h-full min-h-0 overflow-hidden ${slide.rightClasses || 'flex-1'}`}>
+                                        {slide.rightContent}
+                                    </div>
+                                )}
                             </div>
                         );
                     case 'timeline':
