--- a/index.html
+++ b/index.html
@@ -331,11 +331,41 @@
                 layout: 'split',
                 title: "價值載體數位化",
                 leftContent: (
-                    <div className="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6 items-center justify-items-center w-full">
-                        <img src="https://i.urusai.cc/BBmeU.png" alt="價值載體 1" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
-                        <img src="https://i.urusai.cc/G3S4y.png" alt="價值載體 2" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
-                        <img src="https://i.urusai.cc/dq3ub.png" alt="價值載體 3" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
-                        <img src="https://i.urusai.cc/CODJL.png" alt="價值載體 4" className="w-full max-w-[180px] h-auto object-contain rounded-2xl border border-slate-200 shadow-sm" />
+                    <div className="w-full max-w-4xl mx-auto">
+                        <p className="text-slate-500 text-center text-sm md:text-base mb-6 md:mb-8">從實物到數位 · 隨歷史演進</p>
+                        <div className="relative">
+                            <div className="hidden md:block absolute left-[12%] right-[12%] top-[22%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
+                            <div className="flex flex-col md:flex-row items-center justify-between gap-6 md:gap-0 w-full relative z-10">
+                                {[
+                                    { src: "https://i.urusai.cc/BBmeU.png", label: "實物", sub: "以物易物" },
+                                    { src: "https://i.urusai.cc/G3S4y.png", label: "貴金屬", sub: "鑄幣" },
+                                    { src: "https://i.urusai.cc/dq3ub.png", label: "紙鈔", sub: "法幣" },
+                                    { src: "https://i.urusai.cc/CODJL.png", label: "數位", sub: "電子支付" }
+                                ].map((item, i) => (
+                                    <div key={i} className="flex flex-col md:flex-row items-center gap-3 md:gap-2 flex-1">
+                                        <div className="flex flex-col items-center w-full group">
+                                            <div className="w-full aspect-square max-w-[120px] md:max-w-[140px] rounded-2xl border-2 border-slate-200 bg-white p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
+                                                <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
+                                            </div>
+                                            <div className="mt-2 text-center">
+                                                <span className="block font-bold text-slate-800 text-sm md:text-base">{item.label}</span>
+                                                <span className="block text-xs text-slate-500">{item.sub}</span>
+                                            </div>
+                                        </div>
+                                        {i < 3 && (
+                                            <div className="hidden md:flex flex-shrink-0 text-amber-500">
+                                                <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fillRule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clipRule="evenodd" /></svg>
+                                            </div>
+                                        )}
+                                    </div>
+                                ))}
+                            </div>
+                        </div>
+                        <div className="mt-8 flex items-center justify-center gap-3 text-slate-400">
+                            <span className="text-xs font-medium">實體</span>
+                            <div className="w-32 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
+                            <span className="text-xs font-medium">數位</span>
+                        </div>
                     </div>
                 ),
                 rightContent: null
