--- a/index.html
+++ b/index.html
@@ -376,21 +376,39 @@
                 tag: "入門比特幣",
                 title: "貨幣越來越「沒用」",
                 content: (
-                    <div className="h-full flex flex-col items-center justify-center py-6 md:py-10" style={{ backgroundImage: 'linear-gradient(rgba(0,0,0,.04) 1px, transparent 1px), linear-gradient(90deg, rgba(0,0,0,.04) 1px, transparent 1px)', backgroundSize: '24px 24px', backgroundColor: '#f8fafc' }}>
-                        <h3 className="text-2xl md:text-4xl font-bold text-slate-900 mb-8 md:mb-12">貨幣越來越「沒用」</h3>
-                        <div className="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6 w-full max-w-4xl">
-                            {[
-                                { num: '1', text: '要能吃' },
-                                { num: '2', text: '要能用' },
-                                { num: '3', text: '摸得著' },
-                                { num: '4', text: '方便交易' }
-                            ].map((item, i) => (
-                                <div key={i} className="bg-blue-800 rounded-2xl p-6 md:p-8 flex flex-col items-center justify-center text-center shadow-lg border border-blue-900/30">
-                                    <span className="text-4xl md:text-5xl font-bold text-white mb-3">{item.num}</span>
-                                    <div className="w-12 md:w-16 h-0.5 bg-white mb-4 rounded-full" />
-                                    <span className="text-lg md:text-xl font-bold text-amber-300">{item.text}</span>
-                                </div>
-                            ))}
+                    <div className="w-full max-w-4xl mx-auto">
+                        <p className="text-slate-500 text-center text-sm md:text-base mb-6 md:mb-8">隨階段演進 · 不再需要</p>
+                        <div className="relative">
+                            <div className="hidden md:block absolute left-[12%] right-[12%] top-[28%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
+                            <div className="flex flex-col md:flex-row items-stretch justify-between gap-6 md:gap-0 w-full relative z-10">
+                                {[
+                                    { src: "https://i.urusai.cc/BBmeU.png", label: "要能吃" },
+                                    { src: "https://i.urusai.cc/G3S4y.png", label: "要能用" },
+                                    { src: "https://i.urusai.cc/dq3ub.png", label: "摸得著" },
+                                    { src: "https://i.urusai.cc/CODJL.png", label: "方便交易" }
+                                ].map((item, i) => (
+                                    <div key={i} className="flex flex-col md:flex-row items-center gap-3 md:gap-2 flex-1">
+                                        <div className="flex flex-col items-center w-full group">
+                                            <div className="w-full aspect-square max-w-[120px] md:max-w-[140px] rounded-2xl border-2 border-slate-200 bg-slate-50 p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
+                                                <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
+                                            </div>
+                                            <div className="mt-2 text-center">
+                                                <span className="inline-block font-bold text-slate-800 text-sm md:text-base bg-amber-100 text-amber-900 px-3 py-1 rounded-full">{item.label}</span>
+                                            </div>
+                                        </div>
+                                        {i < 3 && (
+                                            <div className="hidden md:flex flex-shrink-0 text-amber-500">
+                                                <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fillRule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clipRule="evenodd" /></svg>
+                                            </div>
+                                        )}
+                                    </div>
+                                ))}
+                            </div>
+                        </div>
+                        <div className="mt-8 flex items-center justify-center gap-3 text-slate-400">
+                            <span className="text-xs font-medium">實體</span>
+                            <div className="w-32 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
+                            <span className="text-xs font-medium">數位 · 只剩交易便利</span>
                         </div>
                     </div>
                 )
