--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
                             <div className="hidden md:block absolute left-[12%] right-[12%] top-[22%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-center justify-between gap-6 md:gap-0 w-full relative z-10">
                                 {[
-                                    { src: "https://i.urusai.cc/BBmeU.png", label: "實物", sub: "以物易物" },
-                                    { src: "https://i.urusai.cc/G3S4y.png", label: "貴金屬", sub: "鑄幣" },
+                                    { src: "https://i.urusai.cc/BBmeU.png", label: "牛羊", sub: "以物易物" },
+                                    { src: "https://i.urusai.cc/G3S4y.png", label: "貴金屬", sub: "貨幣" },
                                     { src: "https://i.urusai.cc/dq3ub.png", label: "紙鈔", sub: "法幣" },
-                                    { src: "https://i.urusai.cc/CODJL.png", label: "數位", sub: "電子支付" }
+                                    { src: "https://i.urusai.cc/CODJL.png", label: "電子支付", sub: "數位訊號" }
                                 ].map((item, i) => (
                                     <div key={i} className="flex flex-col md:flex-row items-center gap-3 md:gap-2 flex-1">
                                         <div className="flex flex-col items-center w-full group">
