--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 title: "價值載體數位化",
                 leftContent: (
                     <div className="w-full max-w-4xl mx-auto">
-                        <p className="text-slate-500 text-center text-sm md:text-base mb-6 md:mb-8">從實物到數位 · 隨歷史演進</p>
+                        <p className="text-slate-500 text-center text-base md:text-lg mb-6 md:mb-8">從實物到數位 · 隨歷史演進</p>
                         <div className="relative">
                             <div className="hidden md:block absolute left-[12%] right-[12%] top-[22%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-center justify-between gap-6 md:gap-0 w-full relative z-10">
@@ -348,8 +348,8 @@
                                                 <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
                                             </div>
                                             <div className="mt-2 text-center">
-                                                <span className="block font-bold text-slate-800 text-sm md:text-base">{item.label}</span>
-                                                <span className="block text-xs text-slate-500">{item.sub}</span>
+                                                <span className="block font-bold text-slate-800 text-base md:text-lg">{item.label}</span>
+                                                <span className="block text-sm text-slate-500">{item.sub}</span>
                                             </div>
                                         </div>
                                         {i < 3 && (
@@ -362,9 +362,9 @@
                             </div>
                         </div>
                         <div className="mt-8 flex items-center justify-center gap-3 text-slate-400">
-                            <span className="text-xs font-medium">實體</span>
+                            <span className="text-sm font-medium">實體</span>
                             <div className="w-32 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
-                            <span className="text-xs font-medium">數位</span>
+                            <span className="text-sm font-medium">數位</span>
                         </div>
                     </div>
                 ),
