--- a/index.html
+++ b/index.html
@@ -377,38 +377,38 @@
                 title: "貨幣越來越「沒用」",
                 content: (
                     <div className="w-full max-w-4xl mx-auto">
-                        <p className="text-slate-500 text-center text-sm md:text-base mb-6 md:mb-8">隨階段演進 · 不再需要</p>
+                        <p className="text-slate-500 text-center text-sm md:text-base mb-8 md:mb-10">隨階段演進 · 不再需要</p>
                         <div className="relative">
-                            <div className="hidden md:block absolute left-[12%] right-[12%] top-[28%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
-                            <div className="flex flex-col md:flex-row items-stretch justify-between gap-6 md:gap-0 w-full relative z-10">
+                            <div className="hidden md:block absolute left-[12%] right-[12%] top-[38%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
+                            <div className="flex flex-col md:flex-row items-stretch justify-between gap-8 md:gap-0 w-full relative z-10">
                                 {[
                                     { src: "https://i.urusai.cc/BBmeU.png", label: "要能吃" },
                                     { src: "https://i.urusai.cc/G3S4y.png", label: "要能用" },
                                     { src: "https://i.urusai.cc/dq3ub.png", label: "摸得著" },
                                     { src: "https://i.urusai.cc/CODJL.png", label: "方便交易" }
                                 ].map((item, i) => (
-                                    <div key={i} className="flex flex-col md:flex-row items-center gap-3 md:gap-2 flex-1">
-                                        <div className="flex flex-col items-center w-full group">
-                                            <div className="w-full aspect-square max-w-[120px] md:max-w-[140px] rounded-2xl border-2 border-slate-200 bg-slate-50 p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
-                                                <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
+                                    <div key={i} className="flex flex-col md:flex-row items-center gap-4 md:gap-2 flex-1">
+                                        <div className="flex flex-col items-center w-full">
+                                            <div className="w-full aspect-square max-w-[80px] md:max-w-[90px] rounded-xl border border-slate-200 bg-slate-50/50 p-1.5 overflow-hidden">
+                                                <img src={item.src} alt={item.label} className="w-full h-full object-contain opacity-30" />
                                             </div>
-                                            <div className="mt-2 text-center">
-                                                <span className="inline-block font-bold text-slate-800 text-sm md:text-base bg-amber-100 text-amber-900 px-3 py-1 rounded-full">{item.label}</span>
+                                            <div className="mt-3 text-center">
+                                                <span className="inline-block font-bold text-slate-900 text-lg md:text-2xl bg-amber-100 text-amber-900 px-4 py-2 rounded-xl shadow-sm">{item.label}</span>
                                             </div>
                                         </div>
                                         {i < 3 && (
                                             <div className="hidden md:flex flex-shrink-0 text-amber-500">
-                                                <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fillRule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clipRule="evenodd" /></svg>
+                                                <svg className="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path fillRule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clipRule="evenodd" /></svg>
                                             </div>
                                         )}
                                     </div>
                                 ))}
                             </div>
                         </div>
-                        <div className="mt-8 flex items-center justify-center gap-3 text-slate-400">
-                            <span className="text-xs font-medium">實體</span>
+                        <div className="mt-10 flex items-center justify-center gap-3 text-slate-500">
+                            <span className="text-sm font-medium">實體</span>
                             <div className="w-32 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
-                            <span className="text-xs font-medium">數位 · 只剩交易便利</span>
+                            <span className="text-sm font-medium">數位 · 只剩交易便利</span>
                         </div>
                     </div>
                 )
