--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
                 layout: 'split',
                 title: "價值載體數位化",
                 leftContent: (
-                    <div className="w-full max-w-4xl mx-auto">
-                        <p className="text-slate-500 text-center text-base md:text-lg mb-6 md:mb-8">從實物到數位 · 隨歷史演進</p>
+                    <div className="w-full max-w-5xl mx-auto">
+                        <p className="text-slate-500 text-center text-lg md:text-xl mb-4 md:mb-6">從實物到數位 · 隨歷史演進</p>
                         <div className="relative">
-                            <div className="hidden md:block absolute left-[12%] right-[12%] top-[22%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
+                            <div className="hidden md:block absolute left-[10%] right-[10%] top-[24%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-center justify-between gap-6 md:gap-0 w-full relative z-10">
                                 {[
                                     { src: "https://i.urusai.cc/BBmeU.png", label: "牛羊", sub: "以物易物" },
@@ -344,27 +344,27 @@
                                 ].map((item, i) => (
                                     <div key={i} className="flex flex-col md:flex-row items-center gap-3 md:gap-2 flex-1">
                                         <div className="flex flex-col items-center w-full group">
-                                            <div className="w-full aspect-square max-w-[120px] md:max-w-[140px] rounded-2xl border-2 border-slate-200 bg-white p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
+                                            <div className="w-full aspect-square max-w-[140px] md:max-w-[180px] rounded-2xl border-2 border-slate-200 bg-white p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
                                                 <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
                                             </div>
-                                            <div className="mt-2 text-center">
-                                                <span className="block font-bold text-slate-800 text-base md:text-lg">{item.label}</span>
-                                                <span className="block text-sm text-slate-500">{item.sub}</span>
+                                            <div className="mt-3 text-center">
+                                                <span className="block font-bold text-slate-800 text-lg md:text-xl">{item.label}</span>
+                                                <span className="block text-base text-slate-500">{item.sub}</span>
                                             </div>
                                         </div>
                                         {i < 3 && (
                                             <div className="hidden md:flex flex-shrink-0 text-amber-500">
-                                                <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fillRule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clipRule="evenodd" /></svg>
+                                                <svg className="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path fillRule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clipRule="evenodd" /></svg>
                                             </div>
                                         )}
                                     </div>
                                 ))}
                             </div>
                         </div>
-                        <div className="mt-8 flex items-center justify-center gap-3 text-slate-400">
-                            <span className="text-sm font-medium">實體</span>
-                            <div className="w-32 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
-                            <span className="text-sm font-medium">數位</span>
+                        <div className="mt-6 flex items-center justify-center gap-3 text-slate-400">
+                            <span className="text-base font-medium">實體</span>
+                            <div className="w-36 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
+                            <span className="text-base font-medium">數位</span>
                         </div>
                     </div>
                 ),
@@ -415,6 +415,62 @@
             },
             {
                 id: 11,
+                layout: 'detail',
+                tag: "入門比特幣",
+                title: "數位交易仰賴中間人",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-4">
+                        <p className="text-slate-500 text-center text-sm md:text-base mb-6">加密貨幣問世之前的數位交易，共通特性是</p>
+                        <div className="relative w-full max-w-3xl flex flex-row items-center justify-between gap-2 md:gap-4">
+                            {/* 左：賣家 */}
+                            <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
+                                <div className="p-5 md:p-6 bg-white rounded-2xl border-2 border-slate-200 shadow-sm flex flex-col items-center">
+                                    <div className="w-16 h-16 md:w-20 md:h-20 rounded-full bg-slate-100 flex items-center justify-center mb-2">
+                                        <span className="text-3xl md:text-4xl">👔</span>
+                                    </div>
+                                    <div className="flex gap-1 mb-2">
+                                        <span className="text-amber-500 font-bold text-lg">$</span>
+                                        <span className="text-amber-500 font-bold text-lg">$</span>
+                                        <span className="text-amber-500 font-bold text-lg">$</span>
+                                    </div>
+                                    <span className="bg-green-500 text-white text-sm font-bold px-3 py-1 rounded-lg">SALE</span>
+                                </div>
+                                <p className="font-bold text-slate-800 mt-3 text-lg">賣家</p>
+                            </div>
+                            {/* 中：銀行（中間人） */}
+                            <div className="flex flex-col items-center w-full md:w-[36%] flex-shrink-0 relative z-10">
+                                <div className="p-5 md:p-6 bg-white rounded-2xl border-2 border-slate-300 shadow-md flex flex-col items-center min-w-[140px]">
+                                    <svg className="w-16 h-16 md:w-20 md:h-20 text-slate-600 mb-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round">
+                                        <path d="M3 21h18"/><path d="M3 10h18"/><path d="M5 6l7-3 7 3"/>
+                                        <path d="M4 10v11"/><path d="M20 10v11"/><path d="M8 14v3"/><path d="M12 14v3"/><path d="M16 14v3"/>
+                                    </svg>
+                                    <span className="bg-blue-600 text-white text-xs font-bold px-2 py-0.5 rounded">BANK</span>
+                                </div>
+                                <p className="font-bold text-slate-800 mt-3 text-lg">銀行（中間人）</p>
+                                {/* 桌面版：兩條斜線從銀行連到左右 */}
+                                <svg className="hidden md:block absolute top-[45%] left-0 right-0 w-full h-24 pointer-events-none" style={{ transform: 'translateY(-50%)' }}>
+                                    <line x1="50%" y1="48" x2="0" y2="90" stroke="#94a3b8" strokeWidth="2" strokeDasharray="4 2"/>
+                                    <line x1="50%" y1="48" x2="100%" y2="90" stroke="#94a3b8" strokeWidth="2" strokeDasharray="4 2"/>
+                                </svg>
+                            </div>
+                            {/* 右：買家 */}
+                            <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
+                                <div className="p-5 md:p-6 bg-white rounded-2xl border-2 border-slate-200 shadow-sm flex flex-col items-center">
+                                    <div className="relative">
+                                        <IconMobilePay />
+                                        <span className="absolute -top-1 -right-1 w-8 h-8 bg-amber-400 rounded-full flex items-center justify-center text-slate-800 text-lg">🛒</span>
+                                    </div>
+                                    <span className="text-slate-500 text-xs mt-1">數位交易</span>
+                                </div>
+                                <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
+                            </div>
+                        </div>
+                        <p className="text-slate-400 text-sm mt-6 text-center">賣家與買家皆透過銀行完成數位交易</p>
+                    </div>
+                )
+            },
+            {
+                id: 12,
                 layout: 'split',
                 title: "價值載體的演進與中間人",
                 leftContent: (
@@ -446,7 +502,7 @@
                 )
             },
             {
-                id: 12,
+                id: 13,
                 layout: 'split',
                 title: "區塊鏈 vs 銀行：數位面交與優缺點",
                 leftContent: (
@@ -481,7 +537,7 @@
                 )
             },
             {
-                id: 13,
+                id: 14,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -513,7 +569,7 @@
                 )
             },
             {
-                id: 14,
+                id: 15,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -538,7 +594,7 @@
                 )
             },
             {
-                id: 15,
+                id: 16,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -565,7 +621,7 @@
                 )
             },
             {
-                id: 16,
+                id: 17,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -600,7 +656,7 @@
                 )
             },
             {
-                id: 17,
+                id: 18,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
